@@ -48,12 +48,7 @@ jobs:
   - bash: |
         source activate $(env_name)
         flake8
-      displayName: flake8
-
-  - bash: |
-      source activate $(env_name)
-      pytest --cov obsplus && pytest --nbval docs/
-    displayName: run test suite
+    displayName: flake8
 
   - bash: |
       source activate $(env_name)
