@@ -24,6 +24,7 @@ obsplus master:
       misinterpreted by pandas (see #130 and #132).
   - obsplus.utils
     * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
+    * get_distance_df now allows dataframes as inputs (#154).
   - obsplus.validate
     * Added the obsplus.validate module which contains a simple framework for
       defining and running validators on python objects. Replaced the old
